Fix z-index for the navbar

--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -8,6 +8,7 @@
   position: fixed;
   width: 100%;
   background-color: $color-navbar;
+  z-index: 99;
 
   &__logo{
     float: left;
