--- a/source/stylesheets/pages/_reservation.scss
+++ b/source/stylesheets/pages/_reservation.scss
@@ -9,4 +9,5 @@
 // Wrap the whole page and center it
 .reservation__content{
   margin-bottom: 3em;
+  text-align: center;
 }
